Set width of CFs labels on Create ticket page to avoid overflow due to long FriendlyType.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@16736 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/forms.css
+++ b/share/html/NoAuth/css/web2/forms.css
@@ -142,6 +142,13 @@ div.results .titlebox-content {
 
 } 
 
+.cflabel {
+ text-align: right;
+ font-size: 0.8em;
+ padding-right: .5em;
+ width: 25%;
+}
+
 .labeltop, .label, .value {
   padding-top: 0.25em;
 }
